[package]
name = "sxd-xpath-visitor"
version = "0.4.3"
edition = "2018"

description = "A Rust XML XPath library"
readme = "README.md"
keywords = ["xml", "xpath"]

repository = "https://https://github.com/ccole-juniper/sxd-xpath"

license = "MIT/Apache-2.0"

[features]
# Unused -- remove on next semver-imcompatible release
unstable = []

[dependencies]
peresil = "0.3.0"
sxd-document = ">= 0.2, < 0.4"
snafu = "0.5.0"
downcast-rs = "1.2.0"
