[package]
name = "sxd-xpath"
version = "0.4.3"
authors = ["Jake Goulding <jake.goulding@gmail.com>", "ccole <ccole@juniper.net>"]
edition = "2018"

description = "A Rust XML XPath library"
readme = "README.md"
keywords = ["xml", "xpath"]

repository = "https://github.com/ccole-juniper/sxd-xpath"

license = "MIT/Apache-2.0"

[features]
# Unused -- remove on next semver-imcompatible release
unstable = []

[dependencies]
peresil = "0.3.0"
sxd-document = ">= 0.2, < 0.4"
snafu = "0.5.0"
downcast-rs = "1.2.0"
